# galaxy-desktop

./: README.md  galaxy-desktop.in  galaxy-desktop.session  meson.build
meson/: calc-sessions-path
nebulae/: attention-dialog.ui  meson.build  nb-application.c  nb-application.h  nb-attention-dialog.c  nb-attention-dialog.h  nb-panel.c  nb-panel.h  nebulae.gresource.xml
nebulae/test/: meson.build  test-attention-dialog.c
nebulae/themes/: shared.css
panel/: gxy-panel-application.c  gxy-panel-application.h  gxy-panel-main.c  meson.build
pkagent/: auth-panel.ui  gxy-auth-panel.c  gxy-auth-panel.h  gxy-pkagent-main.c  gxy-pkagent.gresource.xml  meson.build
session-launcher/: galaxy-desktop.desktop.in  galaxy-desktop.in  galaxy-desktop.session  meson.build
